--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -2,6 +2,7 @@ header nav {
   position: fixed;
   width: 100%;
   background: var(--main-color-opacity);
+  background-color: black;
   z-index: 2;
   transition: all .3s;
   border-bottom: 1px solid hsla(0,0%,100%,.2);
@@ -32,7 +33,7 @@ header nav .nav-brand p {
 header nav .nav-brand img {
   width: var(--nav-logo-width);
   height: auto;
-  padding-top: 8px;;
+  padding-top: var(--nav-logo-padding-top);
 }
 
 /* hamburger */
